--- a/src/components/Columns/index.scss
+++ b/src/components/Columns/index.scss
@@ -3,5 +3,5 @@
   flex: 1;
   flex-direction: row;
   //overflow-x: hidden;
-  overflow-y: scroll;
+  //overflow-y: scroll;
 }
